more optiosn for sonarcloud

--- a/sonarcloud/dashboard.html
+++ b/sonarcloud/dashboard.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Security Standards vs SonarSource Rules</title>
+    <title>Driven by Sonarcloud data</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.1/bootstrap-table.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
@@ -78,6 +78,7 @@ function myFilterFunction() {
           <tr>
             <th data-field="language">Language</th>
             <th data-field="name">Rule</th>
+            <th data-field="type">Type</th>
             <th data-field="nbissues">Nb issues</th>
           </tr>
       </thead>
