--- a/sonarcloud/dashboard.html
+++ b/sonarcloud/dashboard.html
@@ -76,10 +76,11 @@ function myFilterFunction() {
   <table class="table table-bordered" id="table" width=100%>
       <thead>
           <tr>
-            <th data-field="language">Language</th>
-            <th data-field="name">Rule</th>
+            <th data-field="rule_name">Rule</th>
             <th data-field="type">Type</th>
-            <th data-field="nbissues">Nb issues</th>
+            <th data-field="language">Language</th>
+            <th data-field="project">Project</th>
+            <th data-field="issue_link">Link to issue</th>
           </tr>
       </thead>
   </table>
