check rules script

--- a/securitystandards/dashboard.html
+++ b/securitystandards/dashboard.html
@@ -83,14 +83,13 @@ function myFilterFunction() {
           <tr>
             <th data-field="owaspcat">Owasp TOP 10</th>
             <th data-field="ruletitle">Rule Title</th>
+            <th data-field="type">Type</th>
             <th data-field="java">Java</th>
             <th data-field="csharp">C#</th>
             <th data-field="js">Javascript</th>
             <th data-field="python">Python</th>
             <th data-field="php">Php</th>
-            <th data-field="kotlin">Kotlin</th>
             <th data-field="cfamily">C-family</th>
-            <th data-field="plsql">PL/SQL</th>
           </tr>
       </thead>
   </table>
@@ -106,8 +105,8 @@ function myFilterFunction() {
     </td>
     <td width=53%>
 - <font color=green>RSPEC-XXXX</font>: The rule is implemented in the corresponding analyzer (at least one closed tickets and no open tickets)<br>
-- <font color=orange>RSPEC-XXXX</font>: The rule is not yet implemented in the corresponding analyzer (at least one closed ticket but open tickets)<br>
-- RSPEC-XXXX: The rule is not yet implemented in the corresponding analyzer (no ticket created or only open tickets)
+- <font color=orange>RSPEC-XXXX</font>: The rule is totally implemented in the corresponding analyzer (at least one closed ticket but open tickets)<br>
+- <font color=blue>RSPEC-XXXX</font>: The rule is not yet implemented in the corresponding analyzer (no ticket created or only open tickets)
     </td>
     <td width=11%>
     </td>
